@@ -1,16 +1,19 @@
 package com.codewithprojects.springsecurity.services.Impl;
 
+import com.codewithprojects.springsecurity.dto.TokenResponseDto;
 import com.codewithprojects.springsecurity.entities.Token;
+import com.codewithprojects.springsecurity.entities.TokenStatus;
 import com.codewithprojects.springsecurity.entities.User;
+import com.codewithprojects.springsecurity.repository.TokenRepository;
 import com.codewithprojects.springsecurity.repository.UserRepository;
 import com.codewithprojects.springsecurity.services.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.Optional;
+import java.time.LocalDate;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Implementation of the UserService interface for managing user-related operations.
@@ -20,7 +23,7 @@ import java.util.Optional;
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final TokenServiceImpl tokenServiceImpl;
+    private final TokenRepository tokenRepository;
 
     /**
      * Loads user details by username (email) for authentication.
@@ -58,14 +61,60 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public List<Token> getRequestedToken(Integer user_id) {
-        List<Token> tokens = tokenServiceImpl.getAllRequestedToken();
-        System.out.println(tokens);
+    public TokenResponseDto getRequestedToken(Integer user_id) {
+        // Fetch all tokens where the user is associated
+        List<Token> userTokens = tokenRepository.findByUserId(user_id);
 
-        // Filter tokens for the given user ID
-        return tokens.stream()
-                //.filter(token -> token.getUserId().getId().equals(user_id))
-                .filter(token -> token.getUser().getId().equals(user_id))
-                .toList();
+        // Filter tokens for today's date with PENDING or ACTIVE status
+        LocalDate today = LocalDate.now();
+        List<Token> activeTokens = tokenRepository.findAll().stream()
+                .filter(token ->
+                        (token.getStatus().equals(TokenStatus.ACTIVE) ||
+                                token.getStatus().equals(TokenStatus.PENDING)) &&
+                                token.getIssuedTime().toLocalDate().equals(today)) // Filter by today's date
+                .collect(Collectors.toList());
+
+        // Group tokens by Service ID
+        Map<Long, List<Token>> serviceTokensMap = activeTokens.stream()
+                .collect(Collectors.groupingBy(token -> token.getStaffId().getService().getServiceId()));
+
+        // Map to track current token for each service
+        Map<Long, Token> currentTokenMap = new HashMap<>();
+
+        // Map to track people ahead for each user's token
+        Map<Long, Integer> peopleAheadMap = new HashMap<>();
+
+        // Iterate through each service
+        for (Map.Entry<Long, List<Token>> entry : serviceTokensMap.entrySet()) {
+            List<Token> serviceTokens = entry.getValue();
+
+            // Sort tokens by issued time for correct queue order
+            serviceTokens.sort(Comparator.comparing(Token::getIssuedTime));
+
+            // Identify the current token for the service (First ACTIVE token)
+            Token currentToken = serviceTokens.stream()
+                    .filter(token -> token.getStatus().equals(TokenStatus.ACTIVE))
+                    .findFirst()
+                    .orElse(null);
+
+            currentTokenMap.put(entry.getKey(), currentToken);
+
+            // Calculate 'people ahead' for each user's token in each service
+            int count = 0;
+            for (Token token : serviceTokens) {
+                if (token.getStatus().equals(TokenStatus.PENDING)) {
+                    peopleAheadMap.put(token.getId(), count);
+                    count++; // Increment count only for PENDING tokens
+                }
+            }
+        }
+
+        return new TokenResponseDto(userTokens, new ArrayList<>(currentTokenMap.values()), peopleAheadMap);
+    }
+
+    @Override
+    public List<Token> tokenHistory(Integer id) {
+        return tokenRepository.findByUserId(id);
+
     }
 }
